--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "devDependencies": {
     "@types/node": "^20.9.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "colors": "^1.4.0"
   }
 }
