--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@inquirer/input": "^1.2.14",
+    "@inquirer/select": "^1.3.1",
     "colors": "^1.4.0"
   }
 }
