--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.9.0",
+    "@types/uuid": "^9.0.7",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@inquirer/input": "^1.2.14",
     "@inquirer/select": "^1.3.1",
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "uuid": "^9.0.1"
   }
 }
