--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@inquirer/checkbox": "^1.5.0",
+    "@inquirer/confirm": "^2.0.15",
     "@inquirer/input": "^1.2.14",
     "@inquirer/select": "^1.3.1",
     "colors": "^1.4.0",
